change directory golang-migrate

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,8 +41,12 @@ jobs:
     
     - name: Install golang-migrate
       run: |
+        mkdir -p $HOME/bin
         curl -L https://github.com/golang-migrate/migrate/releases/download/v4.18.1/migrate.linux-amd64.tar.gz | tar xvz
-        mv migrate /usr/bin/
+        chmod +x migrate
+        mv migrate $HOME/bin/
+        echo "$HOME/bin" >> $GITHUB_PATH
+        which migrate
     
     - name: Run migrations
       run: make migrateup
